# InverseKinematics

./: IK.cpp  IK_simple.cpp  InverseKinematics.cc
RBDL/: CMakeLists.txt  example_urdfreader_nl.cc  robot.urdf  untitled.m
pinocchio/: CMakeLists.txt  matlab.hpp  pinocchio_urdf.cpp  visualize.m  visualize.sh
